# src/modules/books/dto/book-detail.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { BookDto } from './book.dto';
+import { StockDto } from '@/modules/stock/dto/stock.dto';
+
+export class BookDetailDto extends BookDto {
+  @ApiProperty({ type: () => [StockDto], description: 'Entradas de estoque para este livro' })
+  estoque!: StockDto[];
+}
